# Chatserver

./: README.md
chat/: CMakeLists.txt
chat/include/: public.hpp
chat/include/server/: chatserver.hpp  chatservice.hpp  redis.hpp
chat/include/server/model/: friendmodel.hpp  group.hpp  groupmodle.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
chat/include/server/mysql/: db.h
chat/src/client/: CMakeLists.txt  main.cpp  menufunction.hpp  socketconn.hpp
chat/src/server/: CMakeLists.txt  chat_server.cpp  chat_service.cpp  main.cpp
chat/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
chat/src/server/mysql/: db.cpp
